--- a/Public/Student/doc.html
+++ b/Public/Student/doc.html
@@ -13,6 +13,7 @@
     <li>第一次投稿添加返回按钮</li>
     <li>新投稿时期刊的下拉框过滤掉已经投过的，并且显示期刊同门中正在审稿的论文数，点击可显示在审论文列表</li>
     <li>去掉某些输入框中人为输入的首尾空格</li>
+    <li>投稿下拉框选择期刊后显示级别</li>
 </ul>
 </body>
 </html>
